# TV_bot_core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  STRATEGY_SPEC.md  V1_ACCEPTANCE_CRITERIA.md  codex_futures_bot_plan.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
apps/cli/src/console/: app.rs  mod.rs  render.rs  state.rs
apps/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.test.tsx  App.tsx  dashboardModels.ts  main.tsx  styles.css  viteProxy.test.ts
apps/dashboard/src/components/: dashboardControlPanels.tsx  dashboardLiveChart.tsx  dashboardMonitoring.tsx  dashboardPrimitives.tsx
apps/dashboard/src/hooks/: useDashboardChart.ts  useDashboardController.ts  useDashboardRuntimeHost.ts  useDashboardSettingsWorkflow.ts  useDashboardStrategyWorkflow.ts
apps/dashboard/src/lib/: api.ts  chartAdapter.ts  dashboardPresentation.ts  dashboardProjection.ts  format.ts
apps/dashboard/src/types/: controlApi.ts
apps/runtime/: Cargo.toml
apps/runtime/src/: history.rs  host.rs  main.rs  operator.rs
config/: runtime.example.toml
crates/broker_tradovate/: Cargo.toml
crates/broker_tradovate/src/: execution.rs  lib.rs  live.rs
crates/broker_tradovate/tests/: live_client.rs  session_manager.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control_api/: Cargo.toml
crates/control_api/src/: http.rs  lib.rs  websocket.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs
crates/execution_engine/: Cargo.toml
crates/execution_engine/src/: lib.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: lib.rs
crates/instrument_resolver/: Cargo.toml
crates/instrument_resolver/src/: lib.rs
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: databento_chart_backfill.rs  databento_live.rs  lib.rs  service.rs
crates/market_data/tests/: load_warmup_ready.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/risk_engine/: Cargo.toml
crates/risk_engine/src/: lib.rs
crates/rule_engine/: Cargo.toml
crates/rule_engine/src/: eval.rs  lib.rs  parser.rs
crates/runtime_kernel/: Cargo.toml
crates/runtime_kernel/src/: lib.rs  service_loop.rs
crates/state_store/: Cargo.toml
crates/state_store/src/: lib.rs
crates/strategy_loader/: Cargo.toml
crates/strategy_loader/src/: lib.rs
crates/strategy_runtime/: Cargo.toml
crates/strategy_runtime/src/: lib.rs
crates/strategy_runtime/tests/: runtime.rs
deploy/remote/linux/: Caddyfile
deploy/remote/linux/systemd/: caddy.service  tv-bot-runtime.service
docs/api/: README.md
docs/architecture/: cli_console_plan.md  current_status.md  dashboard_live_chart_plan.md  dashboard_production_ui_plan.md  integration_audit_2026-04-17.md  phase_0_phase_1_foundations.md  remote_dashboard_access_implementation_checklist.md  remote_dashboard_access_plan.md  remote_dashboard_access_status.md  thread_handoff.md
docs/ops/: README.md  aurora_remote_setup_and_test.md  cli_console.md  cli_standalone.md  credential_setup.md  debugging_guide.md  paper_demo_verification.md  reconnect_and_shutdown_review.md  release_checklist.md  release_readiness_review.md  remote_deployment.md  remote_operator_access.md  storage_fallback_override.md
scripts/: package_release.ps1  package_release.sh
scripts/dev/: README.md  start_databento_observation.ps1
scripts/migrations/: README.md
strategies/docs/: README.md  authoring.md
strategies/examples/: gc_momentum_fade_v1.md  micro_silver_elephant_tradovate_v1.md
strategies/schemas/: README.md
tests/integration/: README.md
tests/paper/: README.md
tests/unit/: README.md
