[package]
name = "tv-bot-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tv-bot-config = { path = "../../crates/config" }
tv-bot-runtime-kernel = { path = "../../crates/runtime_kernel" }
tracing.workspace = true
tracing-subscriber.workspace = true
