[package]
name = "tv-bot-control-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tv-bot-broker-tradovate = { path = "../broker_tradovate" }
tv-bot-core-types = { path = "../core_types" }
tv-bot-journal = { path = "../journal" }
tv-bot-runtime-kernel = { path = "../runtime_kernel" }

[dev-dependencies]
rust_decimal.workspace = true
serde_json.workspace = true
tv-bot-execution-engine = { path = "../execution_engine" }
tv-bot-risk-engine = { path = "../risk_engine" }
