[package]
name = "tv-bot-indicators"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tv-bot-core-types = { path = "../core_types" }
