[package]
name = "tv-bot-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tv-bot-core-types = { path = "../core_types" }
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
