[package]
name = "tv-bot-market-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tv-bot-core-types = { path = "../core_types" }
async-trait.workspace = true
chrono.workspace = true
databento = { version = "0.45.0", features = ["chrono"] }
rust_decimal.workspace = true
secrecy.workspace = true
serde.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
