[package]
name = "tv-bot-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
tv-bot-core-types = { path = "../core_types" }
tv-bot-persistence = { path = "../persistence" }

[dev-dependencies]
tv-bot-config = { path = "../config" }
