[package]
name = "tv-bot-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
postgres = "0.19.12"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tv-bot-config = { path = "../config" }
tv-bot-core-types = { path = "../core_types" }
