[package]
name = "tv-bot-risk-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
tv-bot-core-types = { path = "../core_types" }

[dev-dependencies]
chrono.workspace = true
