[package]
name = "tv-bot-runtime-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
tv-bot-broker-tradovate = { path = "../broker_tradovate" }
tv-bot-core-types = { path = "../core_types" }
tv-bot-execution-engine = { path = "../execution_engine" }
tv-bot-journal = { path = "../journal" }
tv-bot-market-data = { path = "../market_data" }
tv-bot-risk-engine = { path = "../risk_engine" }
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
tokio.workspace = true
