[package]
name = "tv-bot-strategy-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tv-bot-core-types = { path = "../core_types" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
